[package]
authors = ["Rio Defi Team<dev@riodefi.com>"]
build = "build.rs"
edition = "2018"
name = "riodefi"
version = "0.9.2"

[[bin]]
name = "riodefi"
path = "src/main.rs"

[workspace]
members = [
    "runtime",
    "modules/rio-support"
]

[profile.release]
panic = "unwind"

[dependencies]
futures = "0.3.1"
futures01 = { package = "futures", version = "0.1.29" }
ctrlc = { version = "3.1.3", features = ["termination"] }
log = "0.4.8"
tokio = "0.1.22"
parking_lot = "0.9.0"
codec = { package = "parity-scale-codec", version = "1.1.0" }
trie-root = "0.15.2"
serde_json = "1"
lazy_static = "1.4"
hex-literal = "0.2"

[dependencies.babe]
git = "https://github.com/paritytech/substrate.git"
package = "sc-consensus-babe"
rev = "c6fc2e6240edeb31233b07748c6bf968c7c15553"

[dependencies.support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'frame-support'
rev = "c6fc2e6240edeb31233b07748c6bf968c7c15553"

[dependencies.babe-primitives]
git = "https://github.com/paritytech/substrate.git"
package = "sp-consensus-babe"
rev = "c6fc2e6240edeb31233b07748c6bf968c7c15553"

[dependencies.aura]
git = "https://github.com/paritytech/substrate.git"
package = "sc-consensus-aura" 
rev = "c6fc2e6240edeb31233b07748c6bf968c7c15553"

[dependencies.aura-primitives]
git = "https://github.com/paritytech/substrate.git"
package = "sp-consensus-aura"
rev = "c6fc2e6240edeb31233b07748c6bf968c7c15553"

[dependencies.basic-authorship]
git = "https://github.com/paritytech/substrate.git"
package = "sc-basic-authority"
rev = "c6fc2e6240edeb31233b07748c6bf968c7c15553"

[dependencies.grandpa]
git = "https://github.com/paritytech/substrate.git"
package = "sc-finality-grandpa"
rev = "c6fc2e6240edeb31233b07748c6bf968c7c15553"

[dependencies.consensus-common]
git = "https://github.com/paritytech/substrate.git"
package = "sp-consensus"
rev = "c6fc2e6240edeb31233b07748c6bf968c7c15553"

[dependencies.grandpa-primitives]
git = "https://github.com/paritytech/substrate.git"
package = "sp-finality-grandpa"
rev = "c6fc2e6240edeb31233b07748c6bf968c7c15553"

[dependencies.inherents]
git = "https://github.com/paritytech/substrate.git"
package = "sp-inherents"
rev = "c6fc2e6240edeb31233b07748c6bf968c7c15553"

[dependencies.txpool]
git = "https://github.com/paritytech/substrate.git"
package = "sc-transaction-pool"
rev = "c6fc2e6240edeb31233b07748c6bf968c7c15553"

[dependencies.txpool-api]
git = "https://github.com/paritytech/substrate.git"
package = "sp-transaction-pool"
rev = "c6fc2e6240edeb31233b07748c6bf968c7c15553"

[dependencies.network]
git = "https://github.com/paritytech/substrate.git"
package = "sc-network"
rev = "c6fc2e6240edeb31233b07748c6bf968c7c15553"

[dependencies.primitives]
git = "https://github.com/paritytech/substrate.git"
package = "sp-core"
rev = "c6fc2e6240edeb31233b07748c6bf968c7c15553"

[dependencies.sp-runtime]
git = "https://github.com/paritytech/substrate.git"
package = "sp-runtime"
rev = "c6fc2e6240edeb31233b07748c6bf968c7c15553"

[dependencies.contracts]
git = "https://github.com/paritytech/substrate.git"
package = "pallet-contracts"
rev = "c6fc2e6240edeb31233b07748c6bf968c7c15553"

[dependencies.sp-io]
git = "https://github.com/paritytech/substrate.git"
rev = "c6fc2e6240edeb31233b07748c6bf968c7c15553"

[dependencies.sc-cli]
git = "https://github.com/paritytech/substrate.git"
rev = "c6fc2e6240edeb31233b07748c6bf968c7c15553"

[dependencies.sc-client]
git = "https://github.com/paritytech/substrate.git"
rev = "c6fc2e6240edeb31233b07748c6bf968c7c15553"

[dependencies.sc-executor]
git = "https://github.com/paritytech/substrate.git"
rev = "c6fc2e6240edeb31233b07748c6bf968c7c15553"

[dependencies.sc-service]
git = "https://github.com/paritytech/substrate.git"
rev = "c6fc2e6240edeb31233b07748c6bf968c7c15553"

[dependencies.runtime]
path = "runtime"
package = "riodefi-runtime"

[dependencies.tel]
package = "sc-telemetry"
git = "https://github.com/paritytech/substrate.git"
rev = "c6fc2e6240edeb31233b07748c6bf968c7c15553"

[build-dependencies]
vergen = "3.0.4"
build-script-utils = { package = "substrate-build-script-utils",  git = "https://github.com/paritytech/substrate.git", rev = "c6fc2e6240edeb31233b07748c6bf968c7c15553" }