[package]
name = "riochain-cli"
version = "1.0.3"
authors = ["Rio Defi Team<dev@riodefi.com>"]
edition = "2018"
description = "Implementation of riochain in Rust based on the Substrate framework."

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
futures = "0.3.4"
log = "0.4.8"
structopt = "0.3.8"
parking_lot = "0.10.0"
hex-literal = "0.3.1"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
jsonrpc-pubsub = "15.0.0"

sc-authority-discovery = { version = "0.8.1" }
sc-basic-authorship = { version = "0.8.1" }
sc-transaction-pool = { version = "2.0.1" }
sc-network = { version = "0.8.1" }
sc-consensus-aura = { version = "0.8.1" }
sc-consensus = { version = "0.8.1" }
sc-finality-grandpa = { version = "0.8.1" }
sc-client-api = { version = "2.0.1" }
sc-chain-spec = { version = "2.0.1" }
sc-rpc = { version = "2.0.1" }
sc-telemetry = { version = "2.0.1" }

sp-core = { version = "2.0.1" }
sp-inherents = { version = "2.0.1" }
sp-transaction-pool = { version = "2.0.1" }
sp-consensus-aura = { version = "0.8.1" }
sp-consensus = { version = "0.8.1" }
sp-finality-grandpa = { version = "2.0.1" }
sp-runtime = { version = "2.0.1" }

frame-benchmarking-cli = { version = "2.0.1" }
sc-cli = { version = "0.8.1", optional = true }
sc-service = { version = "0.8.1", optional = true }

rio-primitives = { path = "../primitives" }
rio-executor = { path = "../executor" }
riochain-runtime = { path = "../runtime" }
rio-rpc = { path = "../rpc" }

[build-dependencies]
substrate-build-script-utils = { version = "2.0.1" }

[features]
default = ["cli"]
cli = [
    "sc-cli",
    "sc-service",
    "rio-executor/wasmi-errno",
]
wasmtime = [
    "sc-cli/wasmtime",
    "sc-service/wasmtime",
    "rio-executor/wasmtime",
]
runtime-benchmarks = [
    "riochain-runtime/runtime-benchmarks",
]
