[package]
name = "rio-primitives"
version = "0.1.0"
authors = ["Rio Defi Team<dev@riodefi.com>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false }
serde = { version = "1.0.101", optional = true, features = ["derive"] }

# Substrate primitives
sp-application-crypto = { version = "2.0.1", default-features = false }
sp-core = { version = "2.0.1", default-features = false }
sp-runtime = { version = "2.0.1", default-features = false }
sp-std = { version = "2.0.1", default-features = false }

# Substrate pallets
frame-system = { version = "2.0.1", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "serde/std",

    "sp-application-crypto/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",

    "frame-system/std",
]
