[package]
name = "rio-rpc"
version = "0.1.0"
authors = ["Rio Defi Team<dev@riodefi.com>"]
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
jsonrpc-core = { version = "15.0.0", features = ["arbitrary_precision"] }
jsonrpc-core-client = { version = "15.0.0", features = ["arbitrary_precision"] }
jsonrpc-derive = "15.0.0"

codec = { package = "parity-scale-codec", version = "1.3.1", features = ["derive"] }
serde = { version = "1.0.101", features = ["derive"] }
hex = "0.4"

# Substrate client
sc-client-api = { version = "2.0.1" }
sc-service = { version = "0.8.1", features = ["test-helpers"] }
sc-rpc-api = { version = "0.8.1" }
sc-rpc = { version = "2.0.1" }

sc-finality-grandpa = { version = "0.8.1" }
sc-finality-grandpa-rpc = { version = "0.8.1" }

# Substrate primitives
sp-api = { version = "2.0.1" }
sp-blockchain = { version = "2.0.1" }
sp-block-builder = { version = "2.0.1" }
sp-consensus = { version = "0.8.1" }
sp-runtime = { version = "2.0.1" }
sp-state-machine = { version = "0.8.1" }
sp-transaction-pool = { version = "2.0.1" }

substrate-frame-rpc-system = { version = "2.0.1" }
pallet-transaction-payment-rpc = { version = "2.0.1" }
frame-support = { version = "2.0.1" }

rio-primitives = { path = "../primitives" }
riochain-runtime = { path = "../runtime" }
rio-protocol = { path = "../rio/protocol" }
rio-assets = { path = "../rio/assets" }
rio-gateway = { path = "../rio/gateway" }
rio-gateway-rpc = { path = "../rio/gateway/rpc" }
rio-gateway-rpc-runtime-api = { path = "../rio/gateway/rpc/runtime-api" }
