[package]
authors = ["Rio Defi Team<dev@riodefi.com>"]
edition = "2018"
name = "riodefi-runtime"
version = "0.9.2"

[dependencies]
safe-mix = { version = "1.0.0", default-features = false }
# codec
codec = { package = "parity-scale-codec", version = "1.1.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
hex-literal = "0.2.1"

# substrate
aura-primitives = { package = "sp-consensus-aura", git = "https://github.com/paritytech/substrate.git", rev = "c6fc2e6240edeb31233b07748c6bf968c7c15553", default-features = false }
block-builder-api = { package = "sp-block-builder", git = "https://github.com/paritytech/substrate.git", rev = "c6fc2e6240edeb31233b07748c6bf968c7c15553", default-features = false}
inherents = { package = "sp-inherents", git = "https://github.com/paritytech/substrate.git", rev = "c6fc2e6240edeb31233b07748c6bf968c7c15553", default-features = false}
offchain-primitives = { package = "sp-offchain", git = "https://github.com/paritytech/substrate.git", rev = "c6fc2e6240edeb31233b07748c6bf968c7c15553", default-features = false }
primitives = { package = "sp-core", git = "https://github.com/paritytech/substrate.git", rev = "c6fc2e6240edeb31233b07748c6bf968c7c15553", default-features = false }
randomness-collective-flip = { package = "pallet-randomness-collective-flip", git = "https://github.com/paritytech/substrate.git", rev = "c6fc2e6240edeb31233b07748c6bf968c7c15553", default-features = false }
rstd = { package = "sp-std", git = "https://github.com/paritytech/substrate.git", rev = "c6fc2e6240edeb31233b07748c6bf968c7c15553", default-features = false }
sp-io = { package = "sp-io", git = "https://github.com/paritytech/substrate.git", rev = "c6fc2e6240edeb31233b07748c6bf968c7c15553", default-features = false }
sp-api = { package = "sp-api", git = "https://github.com/paritytech/substrate.git", rev = "c6fc2e6240edeb31233b07748c6bf968c7c15553", default-features = false }
sp-runtime = { package = "sp-runtime", git = "https://github.com/paritytech/substrate.git", rev = "c6fc2e6240edeb31233b07748c6bf968c7c15553", default-features = false }
sp-session = { package = "sp-session", git = "https://github.com/paritytech/substrate.git", rev = "c6fc2e6240edeb31233b07748c6bf968c7c15553", default-features = false }

# substrate runtime module
executive = { package = "frame-executive", git = "https://github.com/paritytech/substrate.git", rev = "c6fc2e6240edeb31233b07748c6bf968c7c15553", default-features = false }
aura = { package = "pallet-aura", git = "https://github.com/paritytech/substrate.git", rev = "c6fc2e6240edeb31233b07748c6bf968c7c15553", default-features = false }
grandpa = { package = "pallet-grandpa", git = "https://github.com/paritytech/substrate.git", rev = "c6fc2e6240edeb31233b07748c6bf968c7c15553", default-features = false }
indices = { package = "pallet-indices", git = "https://github.com/paritytech/substrate.git", rev = "c6fc2e6240edeb31233b07748c6bf968c7c15553", default-features = false }
sudo = { package = "pallet-sudo", git = "https://github.com/paritytech/substrate.git", rev = "c6fc2e6240edeb31233b07748c6bf968c7c15553", default-features = false }
support = { package = "frame-support", git = "https://github.com/paritytech/substrate.git", rev = "c6fc2e6240edeb31233b07748c6bf968c7c15553", default-features = false }
system = { package = "frame-system", git = "https://github.com/paritytech/substrate.git", rev = "c6fc2e6240edeb31233b07748c6bf968c7c15553", default-features = false }
timestamp = { package = "pallet-timestamp", git = "https://github.com/paritytech/substrate.git", rev = "c6fc2e6240edeb31233b07748c6bf968c7c15553", default-features = false }
treasury = { package = "pallet-treasury", git = "https://github.com/paritytech/substrate.git", rev = "c6fc2e6240edeb31233b07748c6bf968c7c15553", default-features = false }
sp-transaction-pool = { package = "sp-transaction-pool", git = "https://github.com/paritytech/substrate.git", rev = "c6fc2e6240edeb31233b07748c6bf968c7c15553", default-features = false }
version = { package = "sp-version", git = "https://github.com/paritytech/substrate.git", rev = "c6fc2e6240edeb31233b07748c6bf968c7c15553", default-features = false }
contracts = { package = "pallet-contracts", git = "https://github.com/paritytech/substrate.git", rev = "c6fc2e6240edeb31233b07748c6bf968c7c15553", default-features = false }
contracts-rpc-runtime-api = { package = "pallet-contracts-rpc-runtime-api", git = "https://github.com/paritytech/substrate.git", rev = "c6fc2e6240edeb31233b07748c6bf968c7c15553", default-features = false }
collective = { package = "pallet-collective", git = "https://github.com/paritytech/substrate.git", rev = "c6fc2e6240edeb31233b07748c6bf968c7c15553", default-features = false }
utility = { package = "frame-utility", git = "https://github.com/paritytech/substrate.git", rev = "c6fc2e6240edeb31233b07748c6bf968c7c15553", default-features = false }
transaction-payment-rpc-runtime-api = { package = "pallet-transaction-payment-rpc-runtime-api", git = "https://github.com/paritytech/substrate.git", rev = "c6fc2e6240edeb31233b07748c6bf968c7c15553", default-features = false }

# rio
rio_assets = { package = "rio-assets", path =  "../modules/rio-assets", default-features = false }
rio_fee = { package = "rio-fee", path =  "../modules/rio-fee", default-features = false }
rio_transaction_payment = { package = "rio-transaction-payment", path =  "../modules/rio-transaction-payment", default-features = false }

rio_oracle = { package = "rio-oracle", path =  "../modules/rio-oracle", default-features = false }
rio_price = { package = "rio-price", path =  "../modules/rio-price", default-features = false }

rio_saving = { package = "rio-saving", path =  "../modules/rio-saving", default-features = false }
rio_loan = { package = "rio-loan", path =  "../modules/rio-loan", default-features = false }

rio_bridge = { package = "rio-bridge", path =  "../modules/rio-bridge", default-features = false }

[build-dependencies]
wasm-builder-runner = { package = "substrate-wasm-builder-runner", git = "https://github.com/paritytech/substrate.git", rev = "c6fc2e6240edeb31233b07748c6bf968c7c15553", version = "1.0.4" }

[features]
default = ["std"]
std = [
    "safe-mix/std",
	"codec/std",
	"serde",

	"aura-primitives/std",
	"block-builder-api/std",
	"inherents/std",
	"offchain-primitives/std",
	"primitives/std",
	"randomness-collective-flip/std",
	"rstd/std",
	"sp-io/std",
	"sp-api/std",
	"sp-runtime/std",
	"sp-session/std",

	# pallet
	"executive/std",
    "aura/std",
    "grandpa/std",
    "indices/std",
	"sudo/std",
	"support/std",
	"system/std",
	"timestamp/std",
    "treasury/std",
	"sp-transaction-pool/std",
	"version/std",
    "contracts/std",
    "contracts-rpc-runtime-api/std",
    "collective/std",
    "utility/std",
    "transaction-payment-rpc-runtime-api/std",

    # rio
    "rio_assets/std",
    "rio_fee/std",
    "rio_transaction_payment/std",

    "rio_oracle/std",
    "rio_price/std",

    "rio_saving/std",
    "rio_loan/std",

    "rio_bridge/std",
]
