[package]
name = "riochain-runtime"
version = "1.0.0"
authors = ["Rio Defi Team<dev@riodefi.com>"]
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
static_assertions = "1.1.0"
smallvec = "1.4.1"

# Substrate primitives
sp-api = { version = "2.0.1", default-features = false }
sp-block-builder = { version = "2.0.1", default-features = false }
sp-consensus-aura = { version = "0.8.1", default-features = false }
sp-core = { version = "2.0.1", default-features = false }
sp-inherents = { version = "2.0.1", default-features = false }
sp-io = { version = "2.0.1", default-features = false }
sp-offchain = { version = "2.0.1", default-features = false }
sp-runtime = { version = "2.0.1", default-features = false }
sp-session = { version = "2.0.1", default-features = false }
sp-std = { version = "2.0.1", default-features = false }
sp-transaction-pool = { version = "2.0.1", default-features = false }
sp-version = { version = "2.0.1", default-features = false }
sp-staking = { version = "2.0.1", default-features = false }

# Substrate pallets
# self custom definition
frame-executive = { version = "2.0.1", path = "../frame/executive", default-features = false }

frame-support = { version = "2.0.1", default-features = false }
frame-system = { version = "2.0.1", default-features = false }
frame-system-rpc-runtime-api = { version = "2.0.1", default-features = false }

pallet-randomness-collective-flip = { version = "2.0.1", default-features = false }
pallet-scheduler = { version = "2.0.1", default-features = false }

pallet-aura = { version = "2.0.1", default-features = false }

pallet-timestamp = { version = "2.0.1", default-features = false }
pallet-indices = { version = "2.0.1", default-features = false }
pallet-balances = { version = "2.0.1", default-features = false }

pallet-authorship = { version = "2.0.1", default-features = false }
pallet-staking = { version = "2.0.1", default-features = false }
pallet-staking-reward-curve = { version = "2.0.1" }
pallet-offences = { version = "2.0.1", default-features = false }
pallet-session = { version = "2.0.1", default-features = false, features = ["historical"] }
pallet-grandpa = { version = "2.0.1", default-features = false }
pallet-finality-tracker = { version = "2.0.1", default-features = false }
pallet-im-online = { version = "2.0.1", default-features = false }

pallet-democracy = { version = "2.0.1", default-features = false }
pallet-collective = { version = "2.0.1", default-features = false }
pallet-elections-phragmen = { version = "2.0.1", default-features = false }
pallet-membership = { version = "2.0.1", default-features = false }
pallet-treasury = { version = "2.0.1", default-features = false }

pallet-identity = { version = "2.0.1", default-features = false }
pallet-society = { version = "2.0.1", default-features = false }
pallet-recovery = { version = "2.0.1", default-features = false }

pallet-utility = { version = "2.0.1", default-features = false }
pallet-multisig = { version = "2.0.1", default-features = false }
pallet-sudo = { version = "2.0.1", default-features = false }

pallet-transaction-payment-rpc-runtime-api = { version = "2.0.1", default-features = false }

frame-system-benchmarking = { version = "2.0.1-rc5", default-features = false, optional = true }
frame-benchmarking = { version = "2.0.1-rc5", default-features = false, optional = true }

# orml
orml-currencies = { path = "../orml/currencies", default-features = false }
orml-vesting = { path = "../orml/vesting", default-features = false }
orml-oracle = { path = "../orml/oracle", default-features = false }
orml-oracle-rpc-runtime-api = { path = "../orml/oracle/rpc/runtime-api", default-features = false }

rio-primitives = { path = "../primitives", default-features = false }

# rio
rio-protocol = { path =  "../rio/protocol", default-features = false }
rio-assets = { path =  "../rio/assets", default-features = false }
rio-assets-ext = { path =  "../rio/assets-ext", default-features = false }
rio-payment = { path =  "../rio/payment", default-features = false }
rio-payment-fee = { path =  "../rio/payment/fee", default-features = false }
rio-root = { package = "rio-root", path = "../rio/root", default-features = false }

rio-gateway = { path =  "../rio/gateway", default-features = false }
rio-gateway-rpc-runtime-api = { path =  "../rio/gateway/rpc/runtime-api", default-features = false }

rio-prices = { path =  "../rio/prices", default-features = false }

[build-dependencies]
wasm-builder-runner = { package = "substrate-wasm-builder-runner", version = "1.0.6", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "serde",

    "sp-api/std",
    "sp-block-builder/std",
    "sp-consensus-aura/std",
    "sp-core/std",
    "sp-inherents/std",
    "sp-io/std",
    "sp-offchain/std",
    "sp-runtime/std",
    "sp-session/std",
    "sp-std/std",
    "sp-transaction-pool/std",
    "sp-version/std",
    "sp-staking/std",

    "frame-executive/std",
    "frame-support/std",
    "frame-system/std",
    "frame-system-rpc-runtime-api/std",

    "pallet-randomness-collective-flip/std",
    "pallet-scheduler/std",

    "pallet-aura/std",

    "pallet-timestamp/std",
    "pallet-indices/std",
    "pallet-balances/std",

    "pallet-authorship/std",
    "pallet-staking/std",
    "pallet-offences/std",
    "pallet-session/std",
    "pallet-grandpa/std",
    "pallet-finality-tracker/std",
    "pallet-im-online/std",

    "pallet-democracy/std",
    "pallet-collective/std",
    "pallet-elections-phragmen/std",
    "pallet-membership/std",
    "pallet-treasury/std",

    "pallet-identity/std",
    "pallet-society/std",
    "pallet-recovery/std",

    "pallet-utility/std",
    "pallet-multisig/std",
    "pallet-sudo/std",

    "pallet-transaction-payment-rpc-runtime-api/std",

    # orml
    "orml-currencies/std",
    "orml-vesting/std",
    "orml-oracle/std",
    "orml-oracle-rpc-runtime-api/std",

    # rio
    "rio-primitives/std",
    "rio-protocol/std",
    "rio-assets/std",
    "rio-assets-ext/std",
    "rio-payment/std",
    "rio-payment-fee/std",
    "rio-root/std",

    "rio-gateway/std",
    "rio-gateway-rpc-runtime-api/std",

    "rio-prices/std",
]
runtime-benchmarks = [
    "frame-benchmarking",
    "frame-support/runtime-benchmarks",
    "frame-system-benchmarking",
    "frame-system/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "pallet-collective/runtime-benchmarks",
    "pallet-society/runtime-benchmarks",
]
