[package]
name = "rio-bridge"
version = "0.1.0"
authors = ["Rio Team<dev@riodefi.com>"]
edition = "2018"

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "rstd/std",
    "support/std",
    "primitives/std",
    "system/std",
    "sp-runtime/std",
    "runtime-io/std",
    "generic-asset/std",
    "sudo/std",
    "rio_assets/std",
]

[dependencies.serde]
version = "1.0"
optional = true

[dependencies.rstd]
default-features = false
package = "sp-std"
git = "https://github.com/paritytech/substrate.git"
rev = "c6fc2e6240edeb31233b07748c6bf968c7c15553"

[dependencies.primitives]
default-features = false
git = "https://github.com/paritytech/substrate.git"
package = "sp-core"
rev = "c6fc2e6240edeb31233b07748c6bf968c7c15553"

[dependencies.sudo]
default-features = false
git = "https://github.com/paritytech/substrate.git"
package = "pallet-sudo"
rev = "c6fc2e6240edeb31233b07748c6bf968c7c15553"

[dependencies.codec]
default-features = false
features = ["derive"]
package = "parity-scale-codec"
version = "1.1.0"

[dependencies.support]
default-features = false
git = "https://github.com/paritytech/substrate.git"
package = "frame-support"
rev = "c6fc2e6240edeb31233b07748c6bf968c7c15553"

[dependencies.rio_assets]
default-features = false
path = "../rio-assets"
package = "rio-assets"

[dependencies.generic-asset]
default-features = false
git = "https://github.com/paritytech/substrate.git"
package = "pallet-generic-asset"
rev = "c6fc2e6240edeb31233b07748c6bf968c7c15553"

[dependencies.system]
default-features = false
git = "https://github.com/paritytech/substrate.git"
package = "frame-system"
rev = "c6fc2e6240edeb31233b07748c6bf968c7c15553"

[dependencies.sp-runtime]
default-features = false
git = "https://github.com/paritytech/substrate.git"
package = "sp-runtime"
rev = "c6fc2e6240edeb31233b07748c6bf968c7c15553"

[dependencies.runtime-io]
default-features = false
git = "https://github.com/paritytech/substrate.git"
package = "sp-io"
rev = "c6fc2e6240edeb31233b07748c6bf968c7c15553"

[dev-dependencies.primitives]
git = "https://github.com/paritytech/substrate.git"
package = "sp-core"
rev = "c6fc2e6240edeb31233b07748c6bf968c7c15553"

[dev-dependencies.timestamp]
git = "https://github.com/paritytech/substrate.git"
package = "pallet-timestamp"
rev = "c6fc2e6240edeb31233b07748c6bf968c7c15553"

[dev-dependencies.balances]
git = "https://github.com/paritytech/substrate.git"
package = "pallet-balances"
rev = "c6fc2e6240edeb31233b07748c6bf968c7c15553"