[package]
name = "rio-fee"
version = "0.1.0"
authors = ["Rio Team<dev@riodefi.com"]
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true }
codec = { package = "parity-scale-codec", version = "1.1.0", default-features = false }

sp-std = { package = "sp-std", git = "https://github.com/paritytech/substrate.git", rev = "c6fc2e6240edeb31233b07748c6bf968c7c15553", default-features = false }
support = { package = "frame-support", git = "https://github.com/paritytech/substrate.git", rev = "c6fc2e6240edeb31233b07748c6bf968c7c15553", default-features = false }
system = { package = "frame-system", git = "https://github.com/paritytech/substrate.git", rev = "c6fc2e6240edeb31233b07748c6bf968c7c15553", default-features = false }

# rio
rio-primitives = { path = "../../primitives", default-features = false }
rio-assets = { path = "../rio-assets", default-features = false }
rio-support = { path = "../rio-support", default-features = false }


[features]
default = ["std"]
std = [
    "serde",
    "codec/std",

    "sp-std/std",
    "support/std",
    "system/std",

    "rio-primitives/std",
    "rio-assets/std",
    "rio-support/std",
]
