[package]
name = "rio-loan"
version = "0.1.0"
authors = ["Rio Team<dev@riodefi.com"]
edition = "2018"

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "rstd/std",
    "support/std",
    "system/std",
    "sp-runtime/std",
    "runtime-io/std",
    "timestamp/std",
    "pallet-generic-asset/std",
    "rio-assets/std",
    "sudo/std",
]

[dependencies.rstd]
default-features = false
package = "sp-std"
git = "https://github.com/paritytech/substrate.git"
rev = "c6fc2e6240edeb31233b07748c6bf968c7c15553"

[dependencies.serde]
version = "1.0"
optional = true

[dependencies.codec]
default-features = false
features = ["derive"]
package = "parity-scale-codec"
version = "1.1.0"

[dependencies.support]
default-features = false
git = "https://github.com/paritytech/substrate.git"
package = "frame-support"
rev = "c6fc2e6240edeb31233b07748c6bf968c7c15553"

[dependencies.system]
default-features = false
git = "https://github.com/paritytech/substrate.git"
package = "frame-system"
rev = "c6fc2e6240edeb31233b07748c6bf968c7c15553"

[dependencies.sp-runtime]
default-features = false
git = "https://github.com/paritytech/substrate.git"
package = "sp-runtime"
rev = "c6fc2e6240edeb31233b07748c6bf968c7c15553"

[dependencies.runtime-io]
default-features = false
git = "https://github.com/paritytech/substrate.git"
package = "sp-io"
rev = "c6fc2e6240edeb31233b07748c6bf968c7c15553"

[dependencies.pallet-generic-asset]
default-features = false
git = "https://github.com/paritytech/substrate.git"
package = "pallet-generic-asset"
rev = "c6fc2e6240edeb31233b07748c6bf968c7c15553"

[dependencies.rio-assets]
default-features = false
path = "../rio-assets"
package = "rio-assets"

[dependencies.rio_price]
default-features = false
path = "../rio-price"
package = "rio-price"

[dependencies.sudo]
default-features = false
git = "https://github.com/paritytech/substrate.git"
package = "pallet-sudo"
rev = "c6fc2e6240edeb31233b07748c6bf968c7c15553"

[dependencies.timestamp]
default-features = false
git = "https://github.com/paritytech/substrate.git"
package = "pallet-timestamp"
rev = "c6fc2e6240edeb31233b07748c6bf968c7c15553"

[dev-dependencies.primitives]
git = "https://github.com/paritytech/substrate.git"
package = "sp-core"
rev = "c6fc2e6240edeb31233b07748c6bf968c7c15553"

[dev-dependencies.transaction_payment]
git = "https://github.com/paritytech/substrate.git"
package = "pallet-transaction-payment"
rev = "c6fc2e6240edeb31233b07748c6bf968c7c15553"

[dev-dependencies.pallet-generic-asset]
git = "https://github.com/paritytech/substrate.git"
package = "pallet-generic-asset"
rev = "c6fc2e6240edeb31233b07748c6bf968c7c15553"

[dev-dependencies.sudo]
git = "https://github.com/paritytech/substrate.git"
package = "pallet-sudo"
rev = "c6fc2e6240edeb31233b07748c6bf968c7c15553"

[dev-dependencies.balances]
git = "https://github.com/paritytech/substrate.git"
package = "pallet-balances"
rev = "c6fc2e6240edeb31233b07748c6bf968c7c15553"

[dev-dependencies.rio_assets]
path = "../rio-assets"
package = "rio-assets"