[package]
name = "rio-assets-ext"
version = "0.1.0"
authors = ["Rio Team<dev@riodefi.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true }
codec = { package = "parity-scale-codec", version = "1.3.1", features = ["derive"], default-features = false }
bitmask = { version = "0.5.0", default-features = false }

# substrate
sp-std = { version = "2.0.1", default-features = false }
sp-runtime = { version = "2.0.1", default-features = false }

# substrate runtime module
frame-support = { version = "2.0.1", default-features = false }
frame-system = { version = "2.0.1", default-features = false }

# rio runtime module
rio-assets = { path = "../assets", default-features = false }

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "bitmask/std",

    "sp-std/std",
    "sp-runtime/std",

    "frame-support/std",
    "frame-system/std",

    "rio-assets/std",
]
