[package]
name = "rio-gateway"
version = "0.1.0"
authors = ["Rio Team<dev@riodefi.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }
bitmask = { version = "0.5.0", default-features = false }

# substrate
sp-std = { version = "2.0.1", default-features = false }
sp-core = { version = "2.0.1", default-features = false }
sp-runtime = { version = "2.0.1", default-features = false }

# substrate runtime module
frame-support = { version = "2.0.1", default-features = false }
frame-system = { version = "2.0.1", default-features = false }
pallet-sudo = { version = "2.0.1", default-features = false }

# orml
orml-traits = { path = "../../orml/traits", default-features = false }

# rio runtime module
rio-primitives = { path = "../../primitives", default-features = false }
rio-support = { path = "../support", default-features = false }

[dev-dependencies]
sp-io = { version = "2.0.1" }
timestamp = { package = "pallet-timestamp", version = "2.0.1" }
collective = { package = "pallet-collective", version = "2.0.1" }
rio-assets = { path = "../assets" }

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "bitmask/std",

    "sp-std/std",
    "sp-core/std",
    "sp-runtime/std",

    "frame-support/std",
    "frame-system/std",
    "pallet-sudo/std",

    "orml-traits/std",

    "rio-primitives/std",
    "rio-support/std",
]
