[package]
name = "rio-payment"
version = "0.1.0"
authors = ["Rio Team<dev@riodefi.com>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true }

# substrate
sp-std = { version = "2.0.1", default-features = false }
sp-runtime = { version = "2.0.1", default-features = false }
sp-io = { version = "2.0.1", default-features = false }

# substrate runtime module
frame-support = { version = "2.0.1", default-features = false }
frame-system = { version = "2.0.1", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "2.0.1", default-features = false }

# rio
rio-primitives = { path = "../../primitives", default-features = false }
rio-support = { path = "../support", default-features = false }

[dev-dependencies]
sp-core = { version = "2.0.1" }
sp-storage = { version = "2.0.1" }
pallet-balances = { version = "2.0.1" }
smallvec = "1.4.0"

orml-traits = { path = "../../orml/traits" }

rio-assets = { path = "../assets" }
rio-protocol = { path = "../protocol" }
rio-payment-fee = { path = "./fee" }

[features]
default = ["std"]
std = [
    "codec/std",
    "serde",

    "sp-std/std",
    "sp-runtime/std",
    "sp-io/std",

    "frame-support/std",
    "frame-system/std",
	"pallet-transaction-payment-rpc-runtime-api/std",

    "rio-primitives/std",
    "rio-support/std",
]
