[package]
name = "rio-prices"
version = "0.1.0"
authors = ["Rio Defi Team<dev@riodefi.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.3.0", default-features = false }

sp-runtime = { version = "2.0.1", default-features = false }
sp-std = { version = "2.0.1", default-features = false }
frame-support = { version = "2.0.1", default-features = false }
frame-system = { version = "2.0.1", default-features = false }

orml-oracle = { path = "../../orml/oracle", default-features = false }
orml-traits = { path = "../../orml/traits", default-features = false }
orml-utilities = { path = "../../orml/utilities", default-features = false }

rio-support = { path = "../support", default-features = false }
rio-primitives = { path = "../../primitives", default-features = false }

[dev-dependencies]
sp-core = { version = "2.0.1", default-features = false }
sp-io = { version = "2.0.1", default-features = false }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",

	"sp-runtime/std",
	"sp-std/std",
	"frame-support/std",
	"frame-system/std",

	"orml-oracle/std",
	"orml-traits/std",
	"orml-utilities/std",

	"rio-support/std",
	"rio-primitives/std",
]
